[package]
name = "program"
version = "1.0.0"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Boilerplate/utility library for command-line programs"
repository = "https://git.dragonma.us/rust/program"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false
