[package]
name = "program"
version = "1.0.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
rust-version = "1.27.0"
description = "Boilerplate/utility library for command-line programs"
repository = "https://git.dragonma.us/rust/program"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false
